# semver-release-action

./: .gitignore  .pre-commit-config.yaml  .yamllint.yml  Dockerfile  README.md  action.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/scripts/: docker-tags.sh  extract-version.sh
.github/workflows/: _reusable-docker-build.yml  _reusable-lint.yml  _reusable-test.yml  ci.yml  release.yml  semver.yml
example/: basic-workflow.yml  manual-ga-release.yml  mono-repo.yml  multi-branch.yml  workflow-dispatch.yml
src/: __init__.py  aliases.py  branch.py  github_api.py  main.py  tags.py
tests/: __init__.py  conftest.py  test_aliases.py  test_branch.py  test_github_api.py  test_integration.py  test_main.py  test_properties.py  test_tags.py
